# 15418-project

./: .gitignore  CMakeLists.txt  CNAME  README.md  TODO.md  generator.cc  index.html  main.cc
include/: network.h  utils.h
include/parallel/: dinics.h  edmonds_karp.h
include/parallel1/: edmonds_karp.h
include/parallel1a/: dinics.h  edmonds_karp.h
include/parallel1b/: dinics.h  edmonds_karp.h
include/parallel1c/: dinics.h  edmonds_karp.h
include/parallel1d/: dinics.h  edmonds_karp.h
include/parallel2/: edmonds_karp.h
include/parallel2a/: dinics.h  edmonds_karp.h
include/parallel2b/: dinics.h  edmonds_karp.h
include/parallel3/: edmonds_karp.h
include/parallel4/: edmonds_karp.h
include/parallel5/: edmonds_karp.h
include/parallel6/: edmonds_karp.h
include/sequential/: dinics.h  edmonds_karp.h
input/: diamond.network  ivan.network  multi.network  test_converter.py
src/: network.cc  utils.cc
src/parallel/: dinics.cc  edmonds_karp.cc
src/parallel1/: edmonds_karp.cc
src/parallel1a/: dinics.cc  edmonds_karp.cc
src/parallel1b/: dinics.cc  edmonds_karp.cc
src/parallel1c/: dinics.cc  edmonds_karp.cc
src/parallel1d/: dinics.cc  edmonds_karp.cc
src/parallel2/: edmonds_karp.cc
src/parallel2a/: dinics.cc  edmonds_karp.cc
src/parallel2b/: dinics.cc  edmonds_karp.cc
src/parallel3/: edmonds_karp.cc
src/parallel4/: edmonds_karp.cc
src/sequential/: dinics.cc  edmonds_karp.cc
